tests/NormalTests/paczka1/fuzzy1/24603415.err
Error in line 1: gp5nxX A615 7,0
Error in line 4: S561 A872 93,5
Error in line 6: S561 A615 59,6
Error in line 8: S561 A141 22,0
Error in line 14: S561 S561 84,4
Error in line 27: wx046wdh9 A615 64,2
Error in line 30: MQxizn A872 14,9
Error in line 36: wUuUerhvW A141 -2,97
Error in line 38: wx046wdh9 A872 7,6
